maze.lessons.maze.island.IslandMaze.scala.error
Escaper:41: error: ';' expected but 'else' found.
		}else{
                 ^