maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def murAuNord():Boolean={
	var y = getDirection()
	setDirection(Direction.NORTH)
	if((estFaceMur()) && (getY() == 0)){
		return true
	}else{
		setDirection(y)
		return false
	}
}

def murAGauche():Boolean={
		gauche()
		if(estFaceMur()){
			droite()
			return true
		}else{
			droite()
			return false
		}
	}
	def keepHandOnSideWall(){
		if (murAGauche()){
			if(!estFaceMur()){
				avance()
			}else{
				droite()
			}
		}else{
			gauche()
			if(!estFaceMur()){
				avance()
			}
		}
	}
	while(!murAuNord()){
		while(estFaceMur()){
			keepHandOnSideWall()
		}else{
			avance()
		}
		setDirection(Direction.NORTH)
	}
	
	droite()
	while(!estSurBiscuit()){
		keepHandOnSideWall()
	}
	prendBiscuit()
}
